--- a/src/public/style.css
+++ b/src/public/style.css
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-  background: #2200e4;
+  background-image:"/src/public/images123.jpg";
   padding: 0 20px;
   width: 100%;
   height: 100%;
@@ -71,6 +71,7 @@ body {
   width: 100%;
   cursor: default;
   border-radius: 3px;
+  cursor: pointer;
 }
 
 .search-input.active .autocom-box li {
