--- a/src/public/style.css
+++ b/src/public/style.css
@@ -11,8 +11,8 @@ html {
 }
 
 body {
-  background-image:"/src/public/images123.jpg";
-  padding: 0 20px;
+  background-image: url('https://wallpaperaccess.com/full/840360.jpg');
+  background-size: cover;
   width: 100%;
   height: 100%;
 }
@@ -24,6 +24,7 @@ body {
 
 .wrapper {
   max-width: 450px;
+
   margin: 150px auto;
 }
 
@@ -36,7 +37,7 @@ body {
 }
 
 .search-input input {
-  height: 55px;
+  height: 20%;
   width: 100%;
   outline: none;
   border: none;
@@ -90,12 +91,22 @@ body {
   text-align: center;
   line-height: 55px;
   font-size: 20px;
-  color: #644bff;
+  color: red;
   cursor: pointer;
 }
 .infomation {
   width: 40%;
-  height: 50%;
-  border: #13181f solid 2px;
+  height: auto;
+  border: red solid 3px;
   margin: auto;
+}
+ul {
+  margin-top: 30px;
+}
+p {
+  padding-top: 10px;
+  margin: auto;
+  color: #fff;
+  text-align: center;
+  font-size: 20px;
 }
