--- a/src/public/style.css
+++ b/src/public/style.css
@@ -13,8 +13,8 @@ html {
 body {
   background-image: url('https://wallpaperaccess.com/full/840360.jpg');
   background-size: cover;
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 ::selection {
@@ -23,9 +23,9 @@ body {
 }
 
 .wrapper {
-  max-width: 450px;
+  max-width: 50%;
 
-  margin: 150px auto;
+  margin: 10% auto;
 }
 
 .wrapper .search-input {
@@ -37,10 +37,11 @@ body {
 }
 
 .search-input input {
-  height: 20%;
+  height: 100%;
   width: 100%;
   outline: none;
   border: none;
+  text-align: center;
   border-radius: 5px;
   padding: 0 60px 0 20px;
   font-size: 18px;
@@ -55,7 +56,7 @@ body {
   padding: 0;
   opacity: 0;
   pointer-events: none;
-  max-height: 280px;
+  max-height: 30%;
   overflow-y: auto;
 }
 
@@ -86,16 +87,15 @@ body {
   position: absolute;
   right: 0px;
   top: 0px;
-  height: 55px;
-  width: 55px;
+  height: 100%;
+  width: 15%;
   text-align: center;
-  line-height: 55px;
   font-size: 20px;
   color: red;
   cursor: pointer;
 }
 .infomation {
-  width: 40%;
+  width: 60%;
   height: auto;
   border: red solid 3px;
   margin: auto;
@@ -109,4 +109,14 @@ p {
   color: #fff;
   text-align: center;
   font-size: 20px;
+}
+
+/* @media screen and (max-width: 800px) {
+  .search-input {
+    width: 50%;
+    height: 30%;
+  }
+} */
+.search-input {
+  height: 50px;
 }
